[Mac][MD User Menu] UI Tweaks

Specifically:
1. Fixed misalignment between user menu and avatar button (see bug #1)
2. Fixed pixelated profile icon border (see bug #2)
3. Fixed certain letters being cut off on the bottom for avatar name
4. Disabled the color change for button icons upon mouse down
5. Disabled focus for buttons that are disabled (see bug #3)

See comparative screenshots:
https://drive.google.com/corp/drive/folders/0B7Fvv7JszRyGWUtYM29OdnVjQm8

BUG=632936
BUG=633175
BUG=633877

BUG=615893

Review-Url: https://codereview.chromium.org/2197253002
Cr-Commit-Position: refs/heads/master@{#411323}

Former-commit-id: bd2995fb57c078db3de42e5ad46faf5ad428e80d