chrome/browser/ui/cocoa/profiles/avatar_button_controller.mm
@@ -171,6 +171,8 @@ NSImage* GetImageFromResourceID(int resourceId) {
 
     [avatarButton setBezelStyle:NSShadowlessSquareBezelStyle];
     [avatarButton setButtonType:NSMomentaryChangeButton];
+    if (switches::IsMaterialDesignUserMenu())
+      [[avatarButton cell] setHighlightsBy:NSNoCellMask];
     [avatarButton setBordered:YES];
 
     [avatarButton setAutoresizingMask:NSViewMinXMargin | NSViewMinYMargin];
